--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ ffi = [ "libc" ]
 utils = [ "hal" ]
 hal = [ "toml", "structopt", "serde", "simplelog" ]
 hal-cp2130 = [ "driver-cp2130" ]
-# hal-linux = [ "linux-embedded-hal" ]
+hal-linux = [ "linux-embedded-hal" ]
 # default = [ "mock", "hal", "hal-cp2130", "hal-linux" ]
-default = [ "mock" ] #, "hal" ]
+default = [ "mock" , "hal" ]
 
 [dependencies]
 log = "0.4.6"
@@ -30,9 +30,9 @@ simplelog = { version = "0.8.0", optional = true }
 [dependencies.embedded-hal]
 version = "=1.0.0-alpha.6"
 
-# [dependencies.linux-embedded-hal]
-# version = "0.4.0-alpha.1"
-# optional = true
+[dependencies.linux-embedded-hal]
+#version = "0.4.0-alpha.1"
+optional = true
 
 [dependencies.driver-cp2130]
 version = "1.0.0-alpha.3"
